force-app/main/default/objects/GRN__c/GRN__c.object-meta.xml
<CustomObject>
    <label>GRN</label>
    <nameField>
        <displayFormat>GRN-{000000}</displayFormat>
        <label>GRN No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GRNs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>