force-app/main/default/objects/GRN__c/fields/GRN_Name__c.field-meta.xml
<CustomField>
    <fullName>GRN_Name__c</fullName>
    <label>GRN Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>