force-app/main/default/objects/GRN__c/fields/Missing_Damaged_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Missing_Damaged_Quantity__c</fullName>
    <label>Missing / Damaged Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>