force-app/main/default/objects/GRN__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GRN_Name__c</columns>
    <columns>Order__c</columns>
    <columns>Shipped_Quantity__c</columns>
    <columns>Received_Quantity__c</columns>
    <columns>Missing_Damaged_Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>